src/App.css
body {
  text-align: center;
  color: rgb(245,245,245);
  background: rgb(0,212,255);
  background: radial-gradient(circle, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 43%, rgba(2,0,36,1) 95%);
  height: 100vh;
  font-family: 'Vollkorn', serif;
}

.login {
  margin-top: 500px;
  margin-left: 400px;
  width: 50vw;
  padding: 10px;
  background-color: rgb(255,255,255, 0.3);
  border: rgb(255,255,255, 0.2) 1px solid;
  box-shadow: 5px 10px 18px #888888;
}

.login input {
  padding: 10px;
  margin: 10px;
  font-family: 'Vollkorn', serif;
  font-size: 24px;
}

.signup{
  margin-top: 500px;
  margin-left: 400px;
  width: 50vw;
  background-color: rgb(255,255,255, 0.3);
  border: rgb(255,255,255, 0.2) 1px solid;
  padding: 10px;
  box-shadow: 5px 10px 18px #888888;
}

.signup input {
  padding: 5px;
  margin: 10px;
  font-family: 'Vollkorn', serif;
  font-size: 24px;
}

#form {
  margin-top: 100px;
  margin-left: 400px;
  width: 50vw;
  height: 12git5vh;
  background-color: rgb(255,255,255, 0.3);
  border: rgb(255,255,255, 0.2) 1px solid;
  padding: 10px;
  box-shadow: 5px 10px 18px #888888;
}

#form input {
  padding: 5px;
  margin: 10px;
  width: 500px;
  font-family: 'Vollkorn', serif;
  font-size: 24px;
}

#editForm {
  margin-top: 100px;
  margin-left: 400px;
  margin-top: 125px;
  width: 50vw;
  height: 50vh;
  background-color: rgb(255,255,255, 0.3);
  border: rgb(255,255,255, 0.2) 1px solid;
  padding: 10px;
  box-shadow: 5px 10px 18px #888888;
}

#editForm input {
  padding: 5px;
  margin: 10px;
  font-family: 'Vollkorn', serif;
  font-size: 24px;
}

#pastEntries {
  margin-top: 100px;
  margin-left: 400px;
  width: 50vw;
  height: 40vh;
  background-color: rgb(255,255,255, 0.3);
  border: rgb(255,255,255, 0.2) 1px solid;
  padding: 10px;
  text-decoration: none !important;
  list-style-type: none;
  box-shadow: 5px 10px 18px #888888;
}

#formLogOut {
  margin-left: -5px;
}

.card {
  height: 40vh;
  width: 25vw;
  display: inline-block;
  margin-top: 75px;
  margin-bottom: 75px;
  margin-left: 15px;
  margin-right: 10px;
  padding: 30px 15px;
  border: rgb(255,255,255, 0.2) 1px solid;
  background-color: rgb(255,255,255, 0.3);
  box-shadow: 5px 10px 18px #888888;
}

.card h3 {
  font-size: 24px;
}

.card p {
  font-size: 16px;
}

.gradient {
  background: -webkit-linear-gradient(#e7fda3 2%,  #75d5fc 98%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

button {
  display: inline-block;
  text-decoration: none !important;
  margin: 30px;
  padding: 10px;
  width: 25vh;
  height: 8vh;
  color: rgba(9,9,121,1);
  font-size: 18px;
  background-color: rgb(255,255,255, 0.3);
  box-shadow: 5px 10px 18px #a1a1a1;
  border: rgb(255,255,255, 0.2) 1px solid;
  font-family: 'Vollkorn', serif;
} 

/*#deleteButton {
  display: inline-block;
  text-decoration: none;
  margin: 5px;
  padding: 5px;
  width: 8vh;
  height: 2vh;
  color: rgba(9,9,121,1);
  font-size: 10px;
  background-color: rgb(255,255,255, 0.3);
  box-shadow: 5px 10px 18px #a1a1a1;
  border: rgb(255,255,255, 0.2) 1px solid;
  font-family: 'Vollkorn', serif;
}*/

#intro h1 {
  font-size: 72px;
  font-weight: bold;
}

#intro p {
  font-size: 24px;
}

#description h3 {
  font-size: 36px;
  font-weight: bold;
}

#description p {
  font-size: 18px;
}

@media screen and (min-width: 320px) and (max-width: 359px) and (min-height: 567px) and (max-height: 568px) {
  #intro {
    text-align: center;
    margin-left: 10px;
  }

  #intro h1 {
    font-size: 56px;
  }

  #intro h3 {
    font-size: 36px;
  }

  .card {
    height: 65vh;
    width: 75vw;
  }

  .login {
    margin-top: 60px;
    margin-left: 20px;
    height: 70vh;
    width: 75vw;
  }

  .login input {
    height: 2vh;
    width: 60vw;
  }

  .login button {
    height: 10vh;
    width: 45vw;
  }

  .signup {
    margin-top: 60px;
    margin-left: 20px;
    height: 70vh;
    width: 75vw;
  }

  .signup input {
    height: 2vh;
    width: 60vw;
  }

  .signup button {
    height: 10vh;
    width: 45vw;
  }

  #form {
    margin-left: 5px;
    width: 87vw;
    height: 105vh;
  }

  #form input {
    padding: 5px;
    height: 5vh;
    width: 75vw;
  }

  #pastEntries {
    margin-top: 125px;
    margin-left: 5px;
    width: 87vw;
    height: 50vh;
  }

  #editForm {
    margin-left: 5px;
    width: 87vw;
    height: 105vh;
  }

  #editForm input {
    padding: 5px;
    height: 5vh;
    width: 75vw;
  }

  #formLogOut {
    margin-left: 20px;
  }
}

  @media screen and (min-width: 360px) and (max-width: 374px) and (min-height: 639px) and (max-height: 640px) {
    .card {
      height: 55vh;
      width: 75vw;
    }

    .signup {
      margin-top: 60px;
      margin-left: 25px;
      height: 65vh;
      width: 75vw;
    }

    .signup input {
      height: 2vh;
      width: 55vw;
    }

    .signup button {
      height: 10vh;
      width: 55vw;
    }

    .login {
      margin-top: 60px;
      margin-left: 25px;
      height: 65vh;
      width: 75vw;
    }

    .login input {
      height: 2vh;
      width: 55vw;
    }

    .login button {
      height: 10vh;
      width: 55vw;
    }

    #form {
      margin-left: 5px;
      width: 87vw;
      height: 75vh;
    }

    #form input {
      height: 2vh;
      width: 55vw;
    }

    #pastEntries {
      margin-left: 5px;
      width: 87vw;
      height: 50vh;
    }
  
    #editForm {
      margin-left: 5px;
      width: 87vw;
      height: 75vh;
    }

    #editForm input {
      height: 2vh;
      width: 55vw;
    }

    #formLogOut {
      margin-left: 30px;
    }
  }
/* ... */

